<resources>
    <string name="app_name">Currency Converter</string>
    <string name="from">Из</string>
    <string name="to">В</string>
    <string name="convert">Конвертировать</string>
    <string name="russian_ruble">Российский рубль</string>
    <string name="conversion_error">В процессе конвертации произошла ошибка</string>
    <string name="error_loading_currencies">Ошибка при загрузке списка валют</string>
    <string name="current_rate">Текущий курс: </string>
    <string name="converted_value">Конвертированная валюта:</string>
</resources>
